# taiga_wh_notifier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING-RU.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-RU.md  README.md  STYLEGUIDE.md  docker-compose.caddy.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  test.py
.github/: STYLEGUIDE-RU.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build_and_deploy.yaml  build_and_deploy_docs.yaml  lint.yaml  lint_and_test.yaml  pull_request_merge_notify.yaml
caddy/: Caddyfile
config/: settings.example.yaml  settings.prod_example.yaml  settings.yaml.example
docs/: package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
docs/content/: index.md
docs/content/01_Usage/: 01_getting_started.md  03_aaaa.md
docs/quartz/components/: Breadcrumbs.tsx  Footer.tsx  PageTitle.tsx
docs/quartz/styles/: callouts.scss
docs/quartz/util/: fileTrie.ts
src/: runner.py
src/core/: app.py  const.py  settings.py
src/core/Base/: exceptions.py  singleton.py
src/entities/callback_classes/: AdminActions.py  EditProject.py  Pagination.py  ProfileMenu.py  __init__.py  admin_callbacks.py  checkbox_callbacks.py  instruction_callbacks.py  menu_callbacks.py  profile_callbacks.py  (+1 more)
src/utils/: aggregate_webhooks_utils.py  logger_utils.py  msg_formatter_utils.py  send_message_utils.py  state_utils.py  text_utils.py  validated_text.py  yaml_utils.py
strings/: checkbox_keyboards.yaml  dynamic_keyboards.yaml  formatter_text.yaml  keyboard_buttons.yaml  keyboard_text.yaml  keyboards_buttons.yaml  keyboards_language.yaml  keyboards_list.yaml  message_change_fields.yaml  message_schema.yaml  messages_text.yaml  service_text.yaml  static_keyboards.yaml  webhook_notifications.yaml
tests/configuration/: test_configuration_class.py  test_keyboard_model.py  test_logger_class.py  test_yaml_utils.py
tests/entities/: test_objectid_validation.py  test_webhook_payload_schemas.py
tests/utils/: test_send_message_utils.py
(+119 files in other folders)
