[project]
name = "taiga-wh-notifier"
version = "0.0.0"
description = "TODO"
authors = [
    { name = "proDream", email = "sushkoos@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "dynaconf>=3.2.7",
    "fastapi[standard]>=0.115.8",
    "motor>=3.7.0",
    "pydantic>=2.10.6",
    "pyyaml-include>=2.2",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src"]


[project.scripts]
app = "src.runner:run"
